# computoc

./: CMakeLists.txt  Dockerfile  la.hpp
benchmark/: CMakeLists.txt  main.cpp  matrix.cpp
benchmark/memoc/: CMakeLists.txt
include/: CMakeLists.txt
include/computoc/: CMakeLists.txt  allocators.h  array.h  buffers.h  complex.h  computoc.h  concepts.h  errors.h  linear_algebra.h  math.h  matrix.h  memory.h  ndarray.h  pointers.h  utils.h
include/enumoc/: CMakeLists.txt
include/erroc/: CMakeLists.txt
include/la/: la.hpp
include/math/: CMakeLists.txt
include/math/core/: allocators.h  buffers.h  complex.h  matrix.h  matrix.hpp  memory.h  pointers.h
include/memoc/: CMakeLists.txt  accessors.h  utils.h
test/: CMakeLists.txt  complex.cpp  main.cpp  matrix.cpp  memory.cpp  utils.cpp
test/computoc/: CMakeLists.txt  array.cpp  complex.cpp  computoc.cpp  linear_algebra.cpp  math.cpp  matrix.cpp  memory.cpp  ndarray.cpp  utils.cpp
test/erroc/: CMakeLists.txt  enumgen.cpp
test/memoc/: CMakeLists.txt  accessors.cpp  utils.cpp
tests/computoc/: array.cpp  linear_algebra.cpp
tests/enumoc/: CMakeLists.txt
tests/erroc/: CMakeLists.txt
